# ctsa

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: BUILD_EXE.md  RELEASING.md  REVERSE_ENGINEER_UI.md  UPDATES.md  archived-atmospheres.md
public/audio/: README.md
public/audio/atmosphere/: thunderstorm.m4a
scripts/: create-icon.cjs  gen-ccst-pdf-practice-sets.mjs  generate-a-plus-glossary.mjs  sync-windows-bundle.mjs  tauri-bundle-win.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/audio/: atmosphereAudio.ts
src/components/: CardFlip.css  CardFlip.tsx  DragDropContainer.css  DragDropContainer.tsx  UpdaterSection.css  UpdaterSection.tsx
src/components/Layout/: AppLayout.css  AppLayout.tsx  ClassicBaseShell.tsx  LayoutPresetRouter.tsx  Sidebar.css  Sidebar.tsx  Titlebar.css  Titlebar.tsx  mainNav.tsx
src/components/effects/: AmbientFrame.css  AmbientFrame.tsx  (+10 more)
src/config/: githubRelease.ts
src/context/: AppContext.tsx  LayoutPresetContext.tsx  PomodoroContext.tsx  appContextShared.ts  appTheme.ts  useAppContext.ts
src/data/: aPlusGlossaryGenerated.ts  aPlusTerms.source.txt  ccstPdfImport.ts  ccstPdfPracticeSets.ts  certificationPacks.ts  questions.ts
src/generators/: placeholder.ts
src/hooks/: useAtmosphereAudio.ts  useLocalStorageState.ts
src/screens/: ScreenShell.css
src/styles/: layoutPresetContent.css  layoutPresetVars.css  tokens.css
src/utils/: subnetting.ts
(+75 files in other folders)
